# rust_calc

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs  term.rs
core/: Cargo.toml
core/src/: lib.rs  op.rs  parser.rs  rational.rs  tokenizer.rs
src/: main.rs  op.rs  parser.rs  rational.rs  term.rs  tokeniser.rs  tokenizer.rs
